    Changed the type signature for `editor.selection.getRng()` incorrectly returning `null` #TINY-6843
    Changed some `SaxParser` regular expressions to improve performance #TINY-6823
    Fixed a memory leak by backporting an upstream Sizzle fix #TINY-6859
    Fixed table width style was removed when copying #TINY-6664
    Fixed the order of CSS precedence of `content_style` and `content_css` in the `preview` and `template` plugins. `content_style` now has precedence #TINY-6529
    Fixed an issue where the image dialog tried to calculate image dimensions for an empty image URL #TINY-6611
    Fixed an issue where `scope` attributes on table cells would not change as expected when merging or unmerging cells #TINY-6486
    Fixed the plugin documentation links in the `help` plugin #DOC-703
    Fixed events bound using `DOMUtils` not returning the correct result for `isDefaultPrevented` in some cases #TINY-6834
    Fixed the "Dropped file type is not supported" notification incorrectly showing when using an inline editor #TINY-6834
    Fixed an issue with external styles bleeding into TinyMCE #TINY-6735
    Fixed an issue where parsing malformed comments could cause an infinite loop #TINY-6864
    Fixed incorrect return types on `editor.selection.moveToBookmark` #TINY-6504
    Fixed the type signature for `editor.selection.setCursorLocation()` incorrectly allowing a node with no `offset` #TINY-6843
    Fixed incorrect behaviour when editor is destroyed while loading stylesheets #INT-2282
Version 5.6.2 (2020-12-08)
    Fixed a UI rendering regression when the document body is using `display: flex` #TINY-6783
Version 5.6.1 (2020-11-25)
    Fixed the `mceTableRowType` and `mceTableCellType` commands were not firing the `newCell` event #TINY-6692
    Fixed the HTML5 `s` element was not recognized when editing or clearing text formatting #TINY-6681
    Fixed an issue where copying and pasting table columns resulted in invalid HTML when using colgroups #TINY-6684